[package]
name = "rust-firebase"
version = "0.1.0"
edition = "2021"

[dependencies]
firebase-rs = "2.0.5"
serde = "1.0.147"
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
axum = { version = "0.8.9", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
